# GoHotelBackend

./: .env  .env.example  README.md  alembic.ini  nixpacks.toml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 19971469eafa_add_progress_checklist_and_problems.py  250c3edb6dfe_initial_schema.py  4dc5c4f1ccf6_fix_refresh_token_column_size.py  a1b2c3d4e5f6_add_reservation_pricing_and_hourly.py  a7b8c9d0e1f2_fix_invoice_items_table.py  b2c3d4e5f6a7_add_amenities_and_room_capacity.py  b7c8d9e0f1a2_add_housekeeping_reservation_link.py  c3d4e5f6a7b8_make_amenities_global.py  d4e5f6a7b8c9_make_room_types_global.py  e5f6a7b8c9d0_add_room_base_price.py  f6a7b8c9d0e1_fix_buildings_table.py
app/: main.py
app/application/dto/: amenity.py  auth.py  branch.py  common.py  finance.py  guest.py  hotel.py  housekeeping.py  mobile.py  reservation.py  room.py  user.py
app/application/services/: amenity_service.py  audit_service.py  auth_service.py  automation_service.py  branch_service.py  finance_service.py  guest_service.py  hotel_service.py  housekeeping_service.py  mobile_tasks_service.py  problems_service.py  (+5 more)
app/core/: config.py  constants.py  database.py  exceptions.py  scheduler.py  security.py
app/domain/: enums.py
app/shared/: mixins.py  pagination.py  utils.py  validators.py
docs/: API_DOCS.md  api_v1.md  housekeeping_api.md
scripts/: seed_all_test_data.py  seed_anna_hostel.py  seed_anna_hostel_employees.py  seed_hotel_12.py  seed_ledgers.py  seed_permissions.py  seed_superadmin.py  seed_test_data.py
tests/: conftest.py  run_all_tests.py
(+68 files in other folders)
